src/test/resources/etapa3/failing/structAleradyDeclared.ru
struct Hola {
    Int a, b;
}

impl Hola {
    .(Int a, Int b) {}
    fn method_1 () -> void {}
    st fn method_2(Int wala, Str jeje) -> Int {
        ret 1;
    }
}

struct Hola {}

start {}